--- a/index.html
+++ b/index.html
@@ -18,5 +18,22 @@
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
             <button>Learn More</button>
         </section>
+        <section class="card shop">
+            <div class="icon">
+                <img src="assets/Bag.png" alt="Shop here.">
+            </div>
+            <h3>Shop here.</h3>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            <button>Learn More</button>
+        </section>
+        <section class="card about">
+            <div class="icon">
+                <img src="assets/Play.png" alt="About us.">
+            </div>
+            <h3>About us.</h3>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            <button>Learn More</button>
+        </section>
+    </main>
 </body>
 </html>
